--- a/css/style.css
+++ b/css/style.css
@@ -549,7 +549,7 @@ box-shadow: 0px 0px 3px 4px rgba(199,224,199,1);
 
 #contact_part .info{
     background-color: #87ce8f;
-    height: 797.5px;
+    height: 770px;
     width: 106.6%;
     margin-top: 50px;
 }
@@ -567,32 +567,29 @@ box-shadow: 0px 0px 3px 4px rgba(199,224,199,1);
     border-radius: 5px;
 }
 
-#contact_part .info textarea.form-control{
-    margin-left: 67px;
+#contact_part .info .mb{
+    margin-bottom: 40px;
 }
+
 
 #contact_part .info .form-control{
     width: 419px;
     margin-top: 40px;
-    padding: 80px 0;
     border: 2px solid #add810;
     border-radius: 5px;
+    display: block;
+    margin: 0 auto;
+    padding-bottom: 110px;
+    padding-top: 12px;
 }
 
-#contact_part .info .form-control + label{
-    position: absolute;
-    top: 470px;
-    left: 92px;
-    color: #777777;
-}
 
 #contact_part .info button{
-    width: 200px;
-    padding: 15px 35px;
-    margin-top: 40px;
+    padding: 10px 20px;
+    margin-top: 50px;
     color: #555555;
-    font-size: 17px;
-    font-weight: 900;
+    font-size: 15px;
+    font-weight: 700;
     background: #ffffff;
     border: 2px solid #add810;
     border-radius: 5px;
@@ -603,6 +600,7 @@ box-shadow: 0px 0px 3px 4px rgba(199,224,199,1);
 }
 #contact_part .image img{
     width: 100%;
+    height: 770px;
 }
 
 /*************************************************
